sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:18: error: ')' expected but ',' found.
      if(plusPetitQue(i-(n+1)),tmp){
                              ^AlgInsertionSort:25: error: illegal start of simple expression
    }
    ^